RESOLVED FIXED 114426
scan media feature not supported
https://bugs.webkit.org/show_bug.cgi?id=114426
Summary scan media feature not supported
Rune Lillesveen
Reported 2013-04-11 02:18:08 PDT
Created attachment 197529 [details] Testcase detecting scan support The scan media feature from CSS Media Queries[1] is not supported or recognized. [1] http://www.w3.org/TR/css3-mediaqueries/
Attachments
Testcase detecting scan support (133 bytes, text/html)
2013-04-11 02:18 PDT, Rune Lillesveen
no flags
Patch (12.34 KB, patch)
2013-04-11 02:30 PDT, Rune Lillesveen
no flags
Rune Lillesveen
Comment 1 2013-04-11 02:30:35 PDT
Andreas Kling
Comment 2 2014-02-05 11:22:15 PST
Comment on attachment 197531 [details] Patch Clearing review flag on patches from before 2014. If this patch is still relevant, please reset the r? flag.
Ahmad Saleem
Comment 3 2022-06-09 09:40:34 PDT
I am able to reproduce this bug in Safari 15.5 on macOS 12.4 and all other browser match each other and show "text" as green from the attached test case. Thanks!
Simon Fraser (smfr)
Comment 4 2022-06-09 13:43:25 PDT
Confirmed.
Radar WebKit Bug Importer
Comment 5 2022-07-13 14:35:55 PDT
Matthieu Dubet
Comment 6 2022-07-18 10:02:07 PDT
EWS
Comment 7 2022-07-21 16:44:40 PDT
Committed 252717@main (a74d36b48f3e): <https://commits.webkit.org/252717@main> Reviewed commits have been landed. Closing PR #2513 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.