Support for the "scan" media feature. https://bugs.webkit.org/show_bug.cgi?id=114426

Reviewed by Aditya Keerthi, Tim Nguyen and Chris Dumez.

Support parsing/matching for the "scan" media feature (Media Queries Level 3).
https://www.w3.org/TR/mediaqueries-3/#scan
Like the other implementations, it assumes a modern TV with progressive
display.

* LayoutTests/imported/w3c/web-platform-tests/css/mediaqueries/test_media_queries-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/css/mediaqueries/test_media_queries-expected.txt:
* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/css/mediaqueries/test_media_queries-expected.txt:
* Source/WebCore/css/CSSValueKeywords.in:
* Source/WebCore/css/MediaFeatureNames.h:
* Source/WebCore/css/MediaQueryEvaluator.cpp:
(WebCore::scanEvaluate):
* Source/WebCore/css/MediaQueryExpression.cpp:
(WebCore::isValidValueForIdentMediaFeature):
(WebCore::featureWithValidIdent):
(WebCore::isFeatureValidWithoutValue):

Canonical link: https://commits.webkit.org/252717@main