Source/WebCore/css/MediaQueryExpression.cpp
@@ -67,6 +67,8 @@ static inline bool isValidValueForIdentMediaFeature(const AtomString& feature, c
         return valueID == CSSValuePrefers || valueID == CSSValueNoPreference;
     if (feature == MediaFeatureNames::dynamicRange)
         return valueID == CSSValueHigh || valueID == CSSValueStandard;
+    if (feature == MediaFeatureNames::scan)
+        return valueID == CSSValueProgressive || valueID == CSSValueInterlace;
 
     return false;
 }
@@ -92,7 +94,8 @@ static inline bool featureWithValidIdent(const AtomString& mediaFeature, const C
         || mediaFeature == MediaFeatureNames::prefersContrast
         || mediaFeature == MediaFeatureNames::prefersReducedMotion
         || (mediaFeature == MediaFeatureNames::prefersDarkInterface && (context.useSystemAppearance || isUASheetBehavior(context.mode)))
-        || mediaFeature == MediaFeatureNames::dynamicRange;
+        || mediaFeature == MediaFeatureNames::dynamicRange
+        || mediaFeature == MediaFeatureNames::scan;
 }
 
 static inline bool featureWithValidDensity(const String& mediaFeature, const CSSPrimitiveValue& value)
@@ -210,6 +213,7 @@ static inline bool isFeatureValidWithoutValue(const AtomString& mediaFeature, co
 #if ENABLE(APPLICATION_MANIFEST)
         || mediaFeature == MediaFeatureNames::displayMode
 #endif
+        || mediaFeature == MediaFeatureNames::scan
         || mediaFeature == MediaFeatureNames::videoPlayableInline;
 }
 
